[package]
name = "mev-flashbot-sandwich-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1.0"
